# mureo

./: .dockerignore  .gitignore  .mailmap  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ja.md  README.md  SECURITY.md  gemini-extension.json  glama.json  pyproject.toml
.claude/: settings.local.json.bak
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: budget-rebalance.md  competitive-scan.md  creative-refresh.md  daily-check.md  goal-review.md  learn-diagnosis.md  learn.md  onboard.md  rescue.md  search-term-cleanup.md  sync-state.md  weekly-report.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ABI-stability.md  architecture.md  authentication.md  byod.ja.md  byod.md  cli.md  creative-studio.ja.md  creative-studio.md  getting-started.ja.md  getting-started.md  insight-federation.ja.md  insight-federation.md  integrations.md  mcp-server.md  native-vs-official.ja.md  native-vs-official.md  plugin-authoring.md  strategy-context.md  tdqs-style-guide.md
mureo/: __init__.py  __main__.py  _image_validation.py  auth.py  auth_setup.py  credential_guard.py  desktop_installer.py  fsutil.py  oauth_authcode.py  pip_env.py  throttle.py
mureo/adapters/: __init__.py
mureo/analysis/: anomaly_detector.py  lp_analyzer.py  outcome_eval.py  report_flags.py
mureo/analytics/: __init__.py  models.py  protocol.py  registry.py
mureo/byod/: __init__.py  bundle.py  clients.py  installer.py  runtime.py
mureo/cli/: __init__.py  _tty.py  auth_cmd.py  byod_cmd.py  configure_cmd.py  demo_cmd.py  google_ads.py  install_desktop_cmd.py  learn_cmd.py  main.py  meta_ads.py  native_skills.py  open_cmd.py  providers_cmd.py  rollback_cmd.py  service_cmd.py  settings_remove.py  setup_cmd.py  setup_codex.py  setup_gemini.py  upgrade_cmd.py  web_auth.py
mureo/context/: __init__.py  errors.py  models.py  state.py  strategy.py
mureo/core/: __init__.py  knowledge_store.py  policy.py  runtime_context.py  secret_store.py  state_store.py  strategy_reminder.py  terminal.py  throttle_store.py  url_guard.py  (+1 more)
scripts/: generate_demo_csv.py
tests/: hook_guard_runner.py  test_account_id_tenant_scope.py  test_advisor_federation.py  test_anomaly_detector.py  test_auth.py  test_auth_oauth_helpers.py  test_auth_runtime_context.py  test_auth_setup.py  test_auth_setup_meta.py  test_auth_setup_terminal_restore.py  test_byod.py  test_byod_bundle.py  test_byod_csv_injection.py  test_byod_date_rebase.py  test_byod_readonly_mutations.py  test_byod_runtime_env.py  test_byod_to_float.py  test_cli.py  test_cli_learn.py  test_cli_open.py  test_cli_providers.py  test_cli_rollback.py  test_cli_service.py  test_cli_settings_remove.py  test_cli_setup_cmd_remove.py  test_cli_upgrade.py  test_commands.py  test_config_writer_lock.py  test_configure_serve.py  test_configure_wizard_host_paths.py  test_context.py  test_context_builder.py  test_core_terminal.py  test_creative_generate_skill.py  test_credential_guard.py  test_credentials_concurrency.py  test_currency_offset.py  test_daily_check_structured_flags.py  test_demo_init.py  test_demo_scenarios.py  (+167 more)
(+363 files in other folders)
